Root file handler now works

--- a/Root_Analysis/Root_Analysis.vcxproj
+++ b/Root_Analysis/Root_Analysis.vcxproj
@@ -141,10 +141,13 @@
     <ClCompile Include="..\console.cpp" />
     <ClCompile Include="..\rootstuff.cpp" />
     <ClCompile Include="..\Root_Analysis.cpp" />
+    <ClCompile Include="..\Root_file_handler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Console.h" />
+    <ClInclude Include="..\event_data.h" />
     <ClInclude Include="..\rootstuff.h" />
+    <ClInclude Include="..\Root_file_handler.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
