--- a/Root_Analysis/Root_Analysis.vcxproj.filters
+++ b/Root_Analysis/Root_Analysis.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="..\Root_file_handler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Simple_Hist.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Console.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\event_data.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Simple_Hist.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
