--- a/Root_Analysis/Root_Analysis.vcxproj.filters
+++ b/Root_Analysis/Root_Analysis.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\Simple_Hist.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Analysis.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Console.h">
