--- a/Root_Analysis/Root_Analysis.vcxproj.filters
+++ b/Root_Analysis/Root_Analysis.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\Analysis.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\config_file_reader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Console.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Simple_Hist.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\config_file_reader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
