--- a/Root_Analysis/Root_Analysis.vcxproj
+++ b/Root_Analysis/Root_Analysis.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="..\Analysis.cpp" />
     <ClCompile Include="..\config_file_reader.cpp" />
     <ClCompile Include="..\console.cpp" />
+    <ClCompile Include="..\presorter.cpp" />
     <ClCompile Include="..\Root_Analysis.cpp" />
     <ClCompile Include="..\Root_file_handler.cpp" />
     <ClCompile Include="..\Simple_Hist.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="..\config_file_reader.h" />
     <ClInclude Include="..\Console.h" />
     <ClInclude Include="..\event_data.h" />
+    <ClInclude Include="..\presorter.h" />
     <ClInclude Include="..\Root_file_handler.h" />
     <ClInclude Include="..\Simple_Hist.h" />
   </ItemGroup>
