--- a/Root_Analysis/Root_Analysis.vcxproj.filters
+++ b/Root_Analysis/Root_Analysis.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="..\config_file_reader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\presorter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Console.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\config_file_reader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\presorter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
