--- a/Root_Analysis/Root_Analysis.vcxproj
+++ b/Root_Analysis/Root_Analysis.vcxproj
@@ -159,6 +159,9 @@
     <ClInclude Include="..\Root_file_handler.h" />
     <ClInclude Include="..\Simple_Hist.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\config.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
